--- a/Desenvolvimento de Software para WEB/Atividades/Atividade 2/Atividade2CSS.css
+++ b/Desenvolvimento de Software para WEB/Atividades/Atividade 2/Atividade2CSS.css
@@ -23,7 +23,7 @@ h2{
 
 p{
     background-color: rgba(244, 244, 244, 0.785);
-    font-family:'Times New Roman', Times, serif;
+    font-family:Arial, Helvetica, sans-serif;
     text-decoration: none;
 }
 
